Fix admin communication links

--- a/app/admin/templates/dashboard/index.html
+++ b/app/admin/templates/dashboard/index.html
@@ -214,7 +214,7 @@
                                 <span class="badge bg-soft-primary">قريباً</span>
                             </div>
                         </div>
-                        <a class="btn btn-link mt-3" href="{{ url_for('communications.broadcast_center') }}">
+                        <a class="btn btn-link mt-3" href="{{ url_for('admin.compose_communication') }}">
                             التخطيط للحملة التالية ↗
                         </a>
                     </div>
