--- a/app/admin/templates/dashboard/user_detail.html
+++ b/app/admin/templates/dashboard/user_detail.html
@@ -1,6 +1,6 @@
 <!-- LINKED: Admin user management actions fixed (VIEW / EDIT / DELETE)
 Ensured endpoints, button labels, and behavior correctness without altering layout or design. -->
-{% extends 'dashboard/base.html' %}
+{% extends "dashboard/admin_base.html" %}
 {% set active_page = 'users' %}
 {% block title %}View User | Elite Admin Console{% endblock %}
 
