--- a/app/admin/templates/dashboard/index.html
+++ b/app/admin/templates/dashboard/index.html
@@ -16,7 +16,7 @@
                 <a href="{{ url_for('admin.dashboard_users') }}" class="btn btn-primary">
                     <i class="fa-solid fa-users me-1"></i> إدارة الأعضاء
                 </a>
-                <a href="{{ url_for('reports.reports_home') }}" class="btn btn-outline-primary">
+                <a href="{{ url_for('admin.reports_home') }}" class="btn btn-outline-primary">
                     <i class="fa-solid fa-chart-column me-1"></i> التقارير
                 </a>
             </div>
