Organize shared templates and paths

--- a/app/modules/members/templates/members/auth/choose_membership.html
+++ b/app/modules/members/templates/members/auth/choose_membership.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "core/base.html" %}
 {% block title %}اختر طريقة الانضمام{% endblock %}
 {% block content %}
 <div class="container py-5 text-center">
