--- a/app/modules/members/templates/members/index.html
+++ b/app/modules/members/templates/members/index.html
@@ -1,5 +1,5 @@
 <!-- Homepage template welcoming users to the Elite Discounts platform. -->
-{% extends "base.html" %}
+{% extends "core/base.html" %}
 
 {% block content %}
     <h1>Welcome to Elite Discounts Platform</h1>
